--- a/BoardBloom/BoardBloom/Views/Communities/Show.cshtml
+++ b/BoardBloom/BoardBloom/Views/Communities/Show.cshtml
@@ -113,9 +113,9 @@
                             }
                             else
                             {
-                                <div class="member-avatar-placeholder">
-                                    @(user.FirstName?[0])@(user.LastName?[0])
-                                </div>
+                                <img src="https://st3.depositphotos.com/6672868/13701/v/450/depositphotos_137014128-stock-illustration-user-profile-icon.jpg"
+                                     alt="Profile picture"
+                                     class="member-avatar" />
                             }
 
                             <span class="member-name">
