--- a/BoardBloom/BoardBloom/Views/Users/Index.cshtml
+++ b/BoardBloom/BoardBloom/Views/Users/Index.cshtml
@@ -1,50 +1,70 @@
-﻿
-<br />
-<br />
+﻿@using Microsoft.AspNetCore.Identity
+@using BoardBloom.Models
+@{
+    ViewData["Title"] = "Users";
+}
 
-<div class="row">
-    @foreach (var user in ViewBag.UsersList)
-    {
-        <div class="col-4 mb-4">
-            <div class="card" style="height:100%; width: 100%;">
+<head>
+    <link rel="stylesheet" href="~/css/Users/UserIndex.css" />
+    <script src="~/js/User/UserIndex.js"></script>
+</head>
 
-                <div class="card-body d-flex justify-content-between flex-column">
-                    <div>
-                        <p style="border-bottom: 2px solid purple;"><i class="bi bi-person"> </i> UserName: @user.UserName</p>
+<div class="users-page-wrapper">
+    <!-- Hero Section -->
+    <div class="users-hero">
+        <h1 class="users-hero-title">Discover our <span>Community</span></h1>
 
-                        <p style="border-bottom: 2px solid #8484ff;"><i class="bi bi-envelope"></i> Email utilizator: @user.Email</p>
-
-                        @if (@user.FirstName != null)
-                        {
-                            <p style="border-bottom: 2px solid #8484ff;"><i class="bi bi-person"> </i> Nume utilizator: @user.FirstName</p>
-                        }
-
-                        @if (@user.LastName != null)
-                        {
-                            <p style="border-bottom: 2px solid #8484ff;"><i class="bi bi-person"> </i> Prenume utilizator: @user.LastName</p>
-                        }
-
-                        @if (@user.PhoneNumber != null)
-                        {
-                            <p style="border-bottom: 2px solid #8484ff;"><i class="bi bi-phone"></i> Telefon utilizator: @user.PhoneNumber</p>
-                        }
-
-                    </div>
-
-                    <div class="d-flex flex-row justify-content-between p-3">
-
-                        <div> <a class="btn btn-sm" style="background-color: #3838b2; color: #ffffff;" href="/Users/Edit/@user.Id"> Editare utilizator</a> </div>
-
-                        <div> <a class="btn btn-sm" style="background-color: #3838b2; color: #ffffff;" href="/Users/Show/@user.Id"> Vizualizare utilizator</a> </div>
-
-                    </div>
-                </div>
-
+        <!-- Search Section -->
+        <div class="users-search">
+            <div class="search-container glass-effect">
+                <input type="text"
+                       id="search"
+                       placeholder="Search users..."
+                       value="@ViewBag.CurrentSearch"
+                       onkeyup="handleSearch(event)" />
+                <button class="search-icon">
+                    <img src="https://www.svgrepo.com/show/532555/search.svg" alt="search" />
+                </button>
             </div>
         </div>
+    </div>
+
+    <!-- Users Grid -->
+    <div class="users-grid">
+        @foreach (ApplicationUser user in ViewBag.Users)
+        {
+            @await Html.PartialAsync("~/Views/Shared/_UserCardPartial.cshtml", user)
+        }
+    </div>
+
+    <!-- Pagination -->
+    @if (ViewBag.LastPage > 1)
+    {
+        <div class="pagination glass-effect">
+            @{
+                var currentPage = ViewBag.CurrentPage;
+                var lastPage = ViewBag.LastPage;
+                var searchQuery = ViewBag.CurrentSearch;
+                var baseUrl = string.IsNullOrEmpty(searchQuery) ?
+                "/Users/Index?page=" :
+                $"/Users/Index?search={searchQuery}&page=";
+            }
+
+            <a href="@baseUrl=1" class="page-link">
+                <img src="https://www.svgrepo.com/show/533629/arrow-left-lg.svg" alt="first" />
+            </a>
+
+            @for (int i = Math.Max(1, currentPage - 2); i <= Math.Min(lastPage, currentPage + 2); i++)
+            {
+                <a href="@baseUrl=@i"
+                   class="page-link @(i == currentPage ? "active" : "")">
+                    @i
+                </a>
+            }
+
+            <a href="@baseUrl=@lastPage" class="page-link">
+                <img src="https://www.svgrepo.com/show/533632/arrow-right-lg.svg" alt="last" />
+            </a>
+        </div>
     }
-
 </div>
-
-<br />
-<br />
